[package]
name = "glowing-chainsaw"
authors = ["druskus20"]
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
#resolver = "2"

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["png"]}
#rand = "0.8.4"
#anyhow = "1.0.51"
#extend = "1.1.2"
#autodefault = "2.0.0"
smooth-bevy-cameras = "0.4.0"
bevy-inspector-egui = "0.10.*"
leafwing-input-manager = "0.3.*"
#bevy_mod_picking = "0.5.4"
#bevy_tweening = "0.3.2"

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["dynamic", "png"]}

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"
